# SupermarketSystem

./: AdminPanel.cpp  AdminPanel.h  CMakeLists.txt  CustomerPanel.cpp  CustomerPanel.h  Product.cpp  Product.h  PurchasedProduct.cpp  PurchasedProduct.h  Receipt.cpp  Receipt.h  ReceiptManager.cpp  ReceiptManager.h  StockManager.cpp  StockManager.h  SystemPanel.cpp  SystemPanel.h  main.cpp
